[gd_scene load_steps=9 format=3 uid="uid://c71x88tbuoa8"]

[ext_resource type="Script" path="res://enemies/axe_man/axe_man.gd" id="1_4ppdu"]
[ext_resource type="Texture2D" uid="uid://5ac8fcwis1wt" path="res://enemies/axe_man/AxeMan.png" id="2_sv5gv"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8k6km"]
size = Vector2(23, 47)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_417cj"]
size = Vector2(25, 47)

[sub_resource type="Animation" id="Animation_731df"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AxeMan:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(0, 0)]
}

[sub_resource type="Animation" id="Animation_x7xur"]
resource_name = "attack"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AxeMan:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 0), Vector2i(1, 0), Vector2i(2, 0), Vector2i(3, 0), Vector2i(4, 0)]
}

[sub_resource type="Animation" id="Animation_c5lfi"]
resource_name = "idle"
length = 0.05
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AxeMan:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_t1ywl"]
_data = {
"RESET": SubResource("Animation_731df"),
"attack": SubResource("Animation_x7xur"),
"idle": SubResource("Animation_c5lfi")
}

[node name="AxeMan" type="CharacterBody2D"]
collision_layer = 2
script = ExtResource("1_4ppdu")

[node name="AxeMan" type="Sprite2D" parent="."]
texture_filter = 1
texture = ExtResource("2_sv5gv")
hframes = 5

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-2.5, 1.5)
shape = SubResource("RectangleShape2D_8k6km")

[node name="AttackRange" type="Area2D" parent="."]
unique_name_in_owner = true
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackRange"]
position = Vector2(-2.5, 2)
shape = SubResource("RectangleShape2D_417cj")
debug_color = Color(0.968627, 0, 0, 0.419608)

[node name="AttackInterval" type="Timer" parent="."]
unique_name_in_owner = true
process_callback = 0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
libraries = {
"": SubResource("AnimationLibrary_t1ywl")
}

[connection signal="body_entered" from="AttackRange" to="." method="_on_attack_range_body_entered"]
[connection signal="body_exited" from="AttackRange" to="." method="_on_attack_range_body_exited"]
[connection signal="timeout" from="AttackInterval" to="." method="_on_attack_speed_timeout"]
